#83483: Prevent overflow caused by static height

--- a/Snowdog_Components/components/Organisms/filters/_filters.scss
+++ b/Snowdog_Components/components/Organisms/filters/_filters.scss
@@ -15,6 +15,7 @@
                 height: auto;
                 animation: none;
                 padding: $filters__container-padding\@large;
+                max-height: 100%;
             }
         }
     }
