--- a/Snowdog_Components/components/Templates/catalog/list/_list.scss
+++ b/Snowdog_Components/components/Templates/catalog/list/_list.scss
@@ -15,7 +15,7 @@ $catalog-list__sidebar-additionl-margin\@large: $spacer--medium $spacer--medium 
 
 .catalog-list {
     display: flex;
-    flex-flow: column wrap;
+    flex-flow: column nowrap;
     margin: $catalog-list__margin;
 
     @include mq($screen-l) {
